--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/shop lib"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Shop lib"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
